Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10760

BlackBerry Development Environment Setup Wizard error messages should match non-wizard screens

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 3.0.0-rc1
    • Qt Creator 3.0.0-rc1
    • QNX Support
    • None
    • 030ac4f21a726c4793e96a96485d263edc6b0952

      When creating a certificate using the non-wizard options screen (Tools->Options->BlackBerry->Keys->Create Certificate), the user is prompted with an error/status message that the "Password must be at least 6 characters long." and is not allowed to proceed.

      When using the BlackBerry Development Environment Setup Wizard, if the developer certificate password is shorter than the 6 character minimum, the user is allowed to progress to the next wizard screen and only when pressing "finish" the following error is displayed: "Error creating developer certificate"

      Ideally, the user should be prompted earlier in the wizard (in the Create Developer Certificate screen) that the minimum number of characters was not fulfilled and if that is not possible then the error message should be more verbose and display the same message as the non-wizard screen to be more clear about the cause of the error.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tnatterlund Tobias Nätterlund
            cwest Christina West
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes