QNX: Fix password length warning in environment setup wizard

Task-number: QTCREATORBUG-10760

Change-Id: I5377246968c892bd1232ae7c80d4d84585a66267
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>